# the_continuum

./: .gitignore  pyproject.toml
continuum/: README.md  app.py  test _continuum.py  websearch.py
continuum/actors/: analyst.py  architect.py  base_actor.py  base_llm_actor.py  emotional_hooks.py  meta_persona_layer.py  senate_analyst.py  senate_architect.py  senate_base.py  senate_storyweaver.py  senate_synthesizer.py  specialist_actor.py  storyweaver.py  synthesizer.py  utils.py
continuum/aira/: diff.py  logging.py  meta_rewrite.py  polish.py  prompt.py  rewrite_loop.py  rewrite_pass.py  safety.py
continuum/audio/: meta_speech.py  timbre_backend.py  tts_engine.py
continuum/cli/: run_continuum.py
continuum/config/: config_loader.py  personas.py  settings.py
continuum/core/: context.py  logger.py  messages.py  routing.py  turn_logger.py  types.py
continuum/db/: health_monitor.py  mysql_connection.py  old_sqlalchemy_connection.py  registry.py
continuum/debug/: meta_persona_panel.py
continuum/docs/: Page 3 Intelligence Layer Specification.md  Phase3.md  README.md  actor_personality_cards.md  continuum_architecture.md  phase2_optional_refinements.md  phase_3_summary.md  phase_4_emotional_memory.md  phase_4_jury_adaptive_rubric.md  phase_4_meta_persona_emotional_blennding.md  phase_4_modulation.md  phase_4_overview.md  phase_4_state_machind.md  phase_4_summary.md  senate_behavioral_tweaks.md  ui-issue-chat-duplication.md  ui_overview.md
continuum/emotion/: actor_modulation.py  actor_profiles.py  arc_pipeline.py  emotion_detector.py  emotional_arc_engine.py  (+7 more)
(+153 files in other folders)
