[project]
name = "the-continuum"
version = "0.1.0"
description = "A modular, multi-actor orchestration system called The Continuum."
authors = [
    { name = "George Preston" }
]
readme = "README.md"
requires-python = ">=3.10"

# Core dependencies kept intentionally light
dependencies = [
    "dataclasses-json>=0.6",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
# For future MySQL integration
mysql = [
    "mysql-connector-python>=8.0",
]

dev = [
    "pytest>=7.0",
    "black>=24.0",
    "ruff>=0.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["continuum*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]